--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 asgiref==3.8.1
+boto3==1.37.26
+botocore==1.37.26
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
-Django==5.1.7
+Django==4.2.20
 django-allauth==0.50.0
+django-storages==1.14.6
 idna==3.10
+jmespath==1.0.1
 oauthlib==3.2.2
+pillow==11.1.0
 pycparser==2.22
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
+s3transfer==0.11.4
+six==1.17.0
 sqlparse==0.5.3
 urllib3==2.3.0
