--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,17 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
+dj-database-url==2.3.0
 Django==4.2.20
 django-allauth==0.50.0
 django-storages==1.14.6
+gunicorn==23.0.0
 idna==3.10
 jmespath==1.0.1
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.1.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
@@ -22,4 +26,7 @@ requests-oauthlib==2.0.0
 s3transfer==0.11.4
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 urllib3==2.3.0
+whitenoise==6.9.0
+django-heroku==0.3.1
