--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ requests-oauthlib==2.0.0
 s3transfer==0.11.4
 six==1.17.0
 sqlparse==0.5.3
+stripe==12.0.0
 typing_extensions==4.13.2
 urllib3==2.3.0
 whitenoise==6.9.0
